# Rust-vs-Go

./: README.md
Go/: go.mod  go.sum  main.go
Go/app/: app.go
Go/psql/: handlers.go  psql.go
Go/types/: tweet.go
Rust/: Cargo.toml
Rust/src/: handlers.rs  main.rs
